argocd-managed/fixitloop/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: html-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: html
  template:
    metadata:
      labels:
        app: html
    spec:
      containers:
        - name: html-container
          image: nginx:latest
          volumeMounts:
            - name: html-volume
              mountPath: /usr/share/nginx/html
      volumes:
        - name: html-volume
          configMap:
            name: html-config
