argocd-managed/fixitloop/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: html-ingressroute
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ditiskapot.nl`)
      kind: Rule
      services:
        - name: html-service
          port: 80
